set up templates

--- a/my_website/home/templates/home/base.html
+++ b/my_website/home/templates/home/base.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="navigation-bar" name="navigation-bar">
-        {% block navigation-bar %}
+        {% block navigation %}
         {% endblock %}
     </div>
 
