--- a/my_website/home/templates/home/navigation.html
+++ b/my_website/home/templates/home/navigation.html
@@ -1,5 +1,5 @@
-{% extends 'home/base.html %}
-{% block navigation-bar %}
+{% extends 'home/base.html' %}
+{% block navigation %}
 
     <div>
         <h1> Navigation Bar</h1>
