css added to template pages

--- a/my_website/home/templates/home/navigation.html
+++ b/my_website/home/templates/home/navigation.html
@@ -1,8 +1,8 @@
 {% extends 'home/base.html' %}
 {% block navigation %}
-
+{% load static %}<link rel="stylesheet" type="text/css" href="{% static 'home/css/navigation.css' %}">
     <div>
-        <h1> Navigation Bar</h1>
+        <h1 id="title_nav"> Manny's Software Development</h1>
     </div>
 
 {% endblock %}
